--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*
-  Theme Name: Rapid
-  Theme URL: https://bootstrapmade.com/rapid-multipurpose-bootstrap-business-template/
-  Author: BootstrapMade.com
-  License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -171,7 +164,7 @@ h6 {
 #header.header-pages {
   height: 70px;
   padding: 15px 0;
-  background-color: #fff;
+  background-color: #6c757d;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
 }
 
@@ -214,7 +207,7 @@ h6 {
   width: 100%;
   height: 100vh;
   position: relative;
-  background: rgb(90, 90, 90) center top no-repeat;
+  background: rgb(27, 27, 27) center top no-repeat;
   background-size: cover;
 }
 
@@ -1528,7 +1521,7 @@ h6 {
     height: auto !important;
   }
 
-  #intro .intro-img {
+  #intro .intro-img img{
     width: 80%;
   }
 
